# Epicinium-server-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  maps  server  server-notice.json
keys/: dummy_private.pem  dummy_public.pem  epiciniumserver.pem
logs/: ABOUT.txt
recordings/: ABOUT.txt
src/: lib.rs  main.rs
src/common/: base32.rs  coredump.rs  header.rs  keycode.rs  log.rs  logrotate.rs  mod.rs  patchwork.rs  platform.rs  version.rs
src/logic/: ai.rs  automaton.rs  bible.rs  board.rs  challenge.rs  change.rs  cycle.rs  descriptor.rs  difficulty.rs  epicinium.rs  header.rs  map.rs  mod.rs  order.rs  player.rs  position.rs  ruleset.rs  space.rs  tile.rs  unit.rs  vision.rs
src/server/: botslot.rs  chat.rs  client.rs  clientcluster.rs  countingtest.rs  discord_api.rs  game.rs  killer.rs  limits.rs  lobby.rs  login.rs  logincluster.rs  loginserver.rs  logrotate.rs  message.rs  mod.rs  notice.rs  patch.rs  portal.rs  rating.rs  role.rs  serverclient.rs  servercluster.rs  settings.rs  slack_api.rs  terminate.rs  tokio.rs  tokioserver.rs
src/server/client/: handle.rs  limit.rs  login.rs  ping.rs  pulse.rs  receive.rs  send.rs
src/server/lobby/: name.rs  secrets.rs
