[package]
name = "epicinium"
version = "1.1.0"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
edition = "2018"
publish = false
default-run = "server"

[dependencies]
epicinium_lib = { version = "1.1.0", path = "../epicinium_lib/" }
openssl = { version = "0.10", features = ["vendored"] }
rlimit = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_repr = "*"
serde_plain = "*"
serde-aux = "*"
enumset = { version = "1.0", features = ["serde"] }
vec-drain-where = "*"
rand = "0.7.0"
reqwest = { version = "*", features = ["json"] }
futures = "^0.3.5"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time", "sync", "tcp", "signal", "fs", "io-util", "process"] }
libc = "*"
log = "*"
fern = { version = "^0.6", features = ["reopen-03"] }
chrono = "*"
thread-id = "*"
itertools = "*"
unindent = "*"
docopt = "*"
anyhow = "*"
toml = "*"

[features]
defaults = []

candidate = ["epicinium_lib/candidate"]
version-is-dev = ["epicinium_lib/version-is-dev"]

no-increase-sockets = []

[profile.release]
debug = true
